k8s/local/notes-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-api
  labels:
    app: note-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-api
  template:
    metadata:
      labels:
        app: note-api
    spec:
      # imagePullSecrets:
      #   - name: notes-api-registry
      containers:
        - name: notes-api
          image: localhost:5000/notes-api:arm64 # Use this when using a local cluster
          # image: registry.digitalocean.com/notes-api-registry/notes-api:amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 8022
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: '0.2'
---
kind: Service
apiVersion: v1
metadata:
  name: note-api-service
spec:
  selector:
    app: note-api
  type: NodePort
  ports:
    - name: note-api-port
      nodePort: 30000
      port: 8023
      targetPort: 8022
