k8s/local/local-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 'localhost'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: note-api-service
                port:
                  number: 8023
